--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,49 +1,3 @@
 <resources>
-    <string name="app_name">Mobilidade Suave</string>
-
-    <!-- Navegação -->
-    <string name="nav_home">Início</string>
-    <string name="nav_map">Mapa</string>
-    <string name="nav_trips">Viagens</string>
-    <string name="nav_profile">Perfil</string>
-
-    <!-- Home -->
-    <string name="home_title">Bem-vindo à Mobilidade Suave</string>
-    <string name="home_subtitle">Promova práticas sustentáveis</string>
-    <string name="start_tracking">Iniciar Rastreamento</string>
-    <string name="stop_tracking">Parar Rastreamento</string>
-
-    <!-- Mapa -->
-    <string name="map_title">Operadores de Mobilidade</string>
-    <string name="search_operators">Pesquisar operadores</string>
-    <string name="location_permission_required">Permissão de localização necessária</string>
-
-    <!-- Viagens -->
-    <string name="trips_title">As Minhas Viagens</string>
-    <string name="distance">Distância</string>
-    <string name="duration">Duração</string>
-    <string name="points_earned">Pontos ganhos</string>
-
-    <!-- Perfil -->
-    <string name="profile_title">Perfil</string>
-    <string name="total_points">Pontos totais</string>
-    <string name="total_trips">Viagens totais</string>
-    <string name="share_contacts">Partilhar com Contacto</string>
-    <string name="call_support">Ligar Suporte</string>
-    <string name="send_sms">Enviar SMS</string>
-
-    <!-- Notificações -->
-    <string name="notification_channel_name">Rastreamento de Viagens</string>
-    <string name="notification_channel_desc">Notificações de rastreamento ativo</string>
-    <string name="notification_tracking_title">Rastreamento ativo</string>
-    <string name="notification_tracking_text">A monitorizar a sua deslocação</string>
-
-    <!-- Sensores -->
-    <string name="sensor_accelerometer">Acelerómetro</string>
-    <string name="sensor_not_available">Sensor não disponível</string>
-
-    <!-- Permissões -->
-    <string name="permission_location_rationale">A localização é necessária para rastrear as suas viagens</string>
-    <string name="permission_contacts_rationale">Acesso aos contactos para partilhar resultados</string>
-    <string name="permission_denied">Permissão negada</string>
+    <string name="app_name">CMU_TP</string>
 </resources>
